# F7-Revenue-Share-Token-Smart-Contract

./: README.md  cabal.project  env.sh  revenue-sharing-contract.cabal  rsc-start-pab.sh
app/: pay-to-script.hs  send-rewards.hs
src/: ContractProperties.hs  PAB.hs
src/Oracle/: OffChain.hs  OnChain.hs  Trace.hs
testnet/: pab-config.yml
